[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Plutus"
version = "0.0.1"
description = "Simple dashboard to visualize my transactions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "litestar",
  "sqlalchemy",
]
