[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.black]
line_lenght=88

[project]
name = "Plutus"
dynamic = ["version"]
description = "Simple dashboard to visualize my transactions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy",
  "pytest",
  "black",
  "pytz",
  "pydantic-settings",
  "litestar[standard]",
  "alembic",
]
